--- a/template/package.json
+++ b/template/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "vue": "^2.1.10"{{#router}},
-    "vue-router": "^2.2.0"{{/router}}
+    "vue-router": "^2.2.0"{{/router}}{{#resource}},
+    "vue-resource": "^1.2.0"{{/resource}}
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -91,7 +92,8 @@
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "webpack-merge": "^2.6.1",
+    "webpack-s3-plugin": "^0.9.2"
   },
   "engines": {
     "node": ">= 4.0.0",
