--- a/template/package.json
+++ b/template/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"{{/lint}}
   },
   "dependencies": {
-    "vue": "^2.1.10"{{#router}},
+    "vue": "^2.1.10"{{#material}},
+    "vue-material": "^0.7.1"{{/material}}{{#router}},
     "vue-router": "^2.2.0"{{/router}}{{#resource}},
     "vue-resource": "^1.2.0"{{/resource}}
   },
