--- a/template/package.json
+++ b/template/package.json
@@ -83,6 +83,8 @@
     "selenium-server": "^3.0.1",
     {{/e2e}}
     "semver": "^5.3.0",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
     "opn": "^4.0.2",
     "ora": "^1.1.0",
     "shelljs": "^0.7.6",
